fix scrollbar inn views-filter component

--- a/frontend/src/components/pages/page-search/page-search.scss
+++ b/frontend/src/components/pages/page-search/page-search.scss
@@ -31,6 +31,7 @@
         width: 100%;
         box-shadow: inset 0 -1px 0 0 #e5e5e5, inset 0 1px 0 0 #e5e5e5;
         overflow: hidden;
+        z-index: 99999;
 
         button.view-nav {
           background: transparent;
@@ -88,9 +89,6 @@
 
       .map-wrapper {
         position: fixed;
-
-        // why the 19px? I don't know, but Chrome and Edge agree that's what it takes
-        // top: 19px;
         width: 100%;
 
         // height of window, minus header height, minus view-filter height, minus the search-filter-height
@@ -105,9 +103,14 @@
       }
     }
 
-    .results-list {
-      padding: 0 1.5rem 1rem 0;
-      display: none;
+    .results-wrapper {
+      max-height: calc(100vh - (#{$search-filters-desktop-height} + #{$search-view-filters-height} + 75px));
+      overflow: hidden;
+      overflow-y: scroll;
+      .results-list {
+        padding: 0 1.5rem 1rem 0;
+        display: none;
+      }
     }
   }
 
